[package]
name = "whatsapp_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
email_address = "0.2.4"
itertools = "0.12.1"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.198"
sqlx = "0.7.4"
tokio = "1.37.0"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
